package pt.ipp.isep.dei.esoft.project.DTOs;

public class Skill {
    private String name;

    public Skill (String name){
        this.name = name;
    }

    public String getName() {
        return name;
    }

    public void setName(String name) {
        this.name = name;
    }
}
